--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -29,7 +29,7 @@ page:
   movies: 电影
   movies-desc: 个人喜欢的电影推荐给大家
   links: 友情链接
-  links-desc: 欢迎交换链接，可在当前页面留言
+  links-desc: 欢迎交换链接，可在当前页面留言,国内来必力留言加载可能缓慢，请耐心等等模块出现后留言
   about: 关于
 pagination: 
   next: 下一页
